--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.15.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.96.1",
     "yayasan-panti-asuhan": "file:"
