--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
-    "sweetalert2": "^11.15.1",
+    "sweetalert2": "^11.15.10",
     "web-vitals": "^2.1.4",
     "webpack": "^5.96.1",
     "yayasan-panti-asuhan": "file:"
@@ -44,6 +44,7 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
